<resources>
    <string name="app_name">Closet</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="clothes">Clothes</string>
    <string name="accessories">Accessories</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="account_settings">Account Settings</string>
    <string name="feedback">Feedback</string>
    <string name="settings">Settings</string>
    <string name="delete_data">Delete Data</string>
    <string name="colors">Colors</string>
    <string name="size">Size</string>
    <string name="brand">Brand</string>
    <string name="delete">Delete</string>
    <string name="items">Items</string>
    <string name="outfit_name">Outfit name</string>
    <string name="add_clothing">Add Clothing</string>
    <string name="remove_color">Remove color?</string>
    <string name="cancel">Cancel</string>
    <string name="accept">Accept</string>
    <string name="delete_clothing_item">Delete item?</string>
    <string name="delete_outfit">Delete outfit?</string>
    <string name="delete_filters">Delete filters?</string>
    <string name="remove_attribute">Remove attribute?</string>
    <string name="remove_item">Remove item?</string>
    <string name="create_attribute">Create new attribute</string>
    <string name="attribute_hint">Attribute</string>
    <string name="create_type">Create new type</string>
    <string name="create_color">Create new color</string>
    <string name="filter_outfits">Filter by outfits</string>
    <string name="filter_items">Filter by items</string>
    <string name="color_name">Color name</string>
    <string name="error_type_empty">Type name can\'t be empty</string>
    <string name="error_attribute_empty">Attribute name can\'t be empty</string>
    <string name="enter_new_type_name">Enter new type name</string>
    <string name="type_name">Type name</string>
    <string name="types">Types</string>
    <string name="search">Search</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="followers">followers</string>
    <string name="following">following</string>
    <string name="edit_profile">Edit profile</string>
    <string name="login">Login</string>
    <string name="no_account">Don\'t have an account? Register</string>
    <string name="enter_password">Enter your Password</string>
    <string name="enter_email">Enter your Email</string>
    <string name="register">Register</string>
    <string name="already_have_account">Already have an account? Login</string>
    <string name="enter_username">Enter your username</string>
    <string name="follow">Follow</string>
    <string name="log_out">Log Out</string>
    <string name="unfollow">Unfollow</string>
    <string name="item_link">Item Link</string>
    <string name="upload_outfit">Upload outfit: %1$s?</string>


</resources>