<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="32dp"
    tools:context=".ui.login.LoginActivity">

    <!-- TextView for heading -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="50sp"
        android:textStyle="bold" />

    <!-- Edit text for email -->
    <EditText
        android:id="@+id/email_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_email"
        android:textColor="@color/white"
        android:textColorHint="@color/grey" />

    <EditText
        android:id="@+id/username_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_username"
        android:textColor="@color/white"
        android:textColorHint="@color/grey" />

    <!-- Edit text for password -->
    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/grey" />

    <!-- Button for register with text "Register" -->
    <Button
        android:id="@+id/register_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/primary"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/already_have_account"
        android:textColor="@color/white"
        android:textSize="16sp" />
</LinearLayout>