<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:padding="32dp"
    android:orientation="vertical"
    android:background="@color/black"
    tools:context=".ui.login.LoginActivity">

    <!-- TextView for heading -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="50sp"
        android:layout_marginBottom="40dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        />

    <!-- Edit text for email -->
    <EditText
        android:id="@+id/email_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:hint="@string/enter_email" />

    <!-- Edit text for password -->
    <EditText
        android:id="@+id/password_edittext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/enter_password"
        android:textColor="@color/white"
        android:textColorHint="@color/grey"
        android:inputType="textPassword" />

    <!-- Button for register with text "Register" -->
    <Button
        android:id="@+id/login_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:backgroundTint="@color/primary"
        android:layout_marginTop="20dp"
        android:textSize="20sp"
        android:text="@string/login" />

    <TextView
        android:id="@+id/register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_account"
        android:textSize="16sp"
        android:layout_marginTop="20dp"
        android:textColor="@color/white" />
</LinearLayout>