<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.OutfitAdd"
    android:background="@color/dark_grey">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/icon_back"
        app:backgroundTint="@color/dark_grey"
        app:tint="@null"
        app:fabCustomSize="40dp" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageViewClothing"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:src="@drawable/icon_plus"
                android:background="@color/light_grey"
                android:scaleType="center" />


            <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/colors" />

            <TextView
                android:id="@+id/colors"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:textAlignment="center"/>

            <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/brand" />

            <TextView
                android:id="@+id/brand"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:textAlignment="center"/>

            <TextView
                android:textSize="20sp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/size" />

            <TextView
                android:id="@+id/size"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:layout_margin="10dp"
                android:textAlignment="center"/>

            <TextView
                android:id="@+id/delete_button"
                android:textSize="20sp"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:text="@string/delete"
                android:textColor="@color/white"
                android:layout_gravity="center"
                android:textAlignment="center"
                android:background="@color/light_grey"/>


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>