<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_grey"
    tools:context=".fragments.OutfitAdd">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:src="@drawable/icon_back"
        app:backgroundTint="@color/black"
        app:fabCustomSize="40dp"
        app:tint="@null" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical">


            <ImageView
                android:id="@+id/imageViewClothing"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                android:background="@color/box_color"
                android:scaleType="center"
                android:src="@drawable/icon_plus" />


            <EditText
                android:id="@+id/colors"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/box_outfit_name"
                android:hint="@string/colors"
                android:textAlignment="center"
                android:textColor="@color/dark_grey"
                android:textColorHint="@color/dark_grey" />


            <EditText
                android:id="@+id/brand"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/box_outfit_name"
                android:hint="@string/brand"
                android:textAlignment="center"
                android:textColor="@color/dark_grey"
                android:textColorHint="@color/dark_grey"/>


            <EditText
                android:id="@+id/size"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/box_outfit_name"
                android:hint="@string/size"
                android:textAlignment="center"
                android:textColor="@color/dark_grey"
                android:textColorHint="@color/dark_grey"/>


            <TextView
                android:id="@+id/save_button"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:layout_marginTop="20dp"
                android:background="@drawable/box_save_button"
                android:text="@string/save"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textSize="20sp" />


        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</FrameLayout>