<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="16dp">


    <!-- Color Picker view -->
    <com.skydoves.colorpickerview.ColorPickerView
        android:id="@+id/colorPickerView"
        android:layout_width="match_parent"
        android:layout_height="300dp" />

    <com.skydoves.colorpickerview.sliders.BrightnessSlideBar
        android:id="@+id/brightnessSlide"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_marginTop="16dp" />

    <LinearLayout
        android:id="@+id/colorPreview"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:layout_gravity="center"
        android:background="@drawable/box_dialog"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="16dp"
        android:orientation="horizontal" >
        <EditText
            android:id="@+id/colorName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@android:color/transparent"
            android:hint="@string/color_name"
            android:inputType="text"
            android:layout_gravity="center"
            android:gravity="center"
            android:textColorHint="@color/white"
            android:textColor="@android:color/white"
            android:padding="8dp" />
    </LinearLayout>


    <!-- Custom Buttons -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="16dp"
        android:gravity="end"
        android:weightSum="2">

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/cancel"
            android:textSize="20sp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:backgroundTint="@color/black"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/buttonAccept"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/accept"
            android:layout_marginStart="5dp"
            android:layout_marginEnd="10dp"
            android:backgroundTint="@color/primary"
            android:textColor="@android:color/white" />
    </LinearLayout>

</LinearLayout>
