<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black">

    <!-- Scrollable content -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="100dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_gravity="top"
                android:orientation="horizontal">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:layout_gravity="center_vertical|center_horizontal"
                    android:layout_marginStart="14dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/icon_background_selector"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/icon_account"
                    app:shapeAppearanceOverlay="@style/RoundedImage" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/username"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="20dp"
                        android:text="@string/username"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="25dp"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/num_followers"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="1.987"
                            android:textColor="@color/white"
                            android:textSize="30sp" />

                        <TextView
                            android:id="@+id/num_following"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="687"
                            android:textColor="@color/white"
                            android:textSize="30sp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="5dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/text_followers"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/followers"
                            android:textColor="@color/white"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/text_following"
                            android:layout_width="0dp"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/following"
                            android:textColor="@color/white"
                            android:textSize="20sp" />
                    </LinearLayout>

                    <Button
                        android:id="@+id/follow_button"
                        android:layout_width="200dp"
                        android:layout_height="40dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="5dp"
                        android:backgroundTint="@color/primary"
                        android:text="@string/follow"
                        android:textColor="@color/white"
                        android:textSize="15sp" />
                </LinearLayout>
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="5dp"
                android:background="@color/white" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_outfits"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"/>
        </LinearLayout>
    </ScrollView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|start"
        android:layout_marginTop="10dp"
        android:layout_marginStart="10dp"
        android:src="@drawable/icon_back"
        app:backgroundTint="@color/primary"
        app:tint="@null"
        app:fabCustomSize="40dp" />


</FrameLayout>
